Fix HTML formatting and update image paths

--- a/products.html
+++ b/products.html
@@ -30,7 +30,7 @@
             <!-- Product 1 -->
             <div class="product-card">
                 <div class="card-media">
-                    <img src="ZaMuffin.jpg" alt="Blueberry Muffin">
+                    <img src="Zamuffin.jpg" alt="Blueberry Muffin">
                 </div>
                 <h3>Blueberry Muffin</h3>
                 <p class="product-description">A classic muffin bursting with fresh blueberries.</p>
@@ -138,3 +138,4 @@
     </script>
 </body>
 </html>
+
