Fix HTML formatting and structure in products.html

--- a/products.html
+++ b/products.html
@@ -54,7 +54,7 @@
             <!-- Product 3 -->
             <div class="product-card">
                 <div class="card-media">
-                    <img src="Lemon Drizzle Muffin.jpg" alt="Lemon Drizzle Muffin">
+                    <img src="Lemon Drizzle muffin.jpg" alt="Lemon Drizzle Muffin">
                 </div>
                 <h3>Lemon Drizzle Muffin</h3>
                 <p class="product-description">Light, zesty, and perfectly sweet.</p>
@@ -138,4 +138,5 @@
     </script>
 </body>
 </html>
+
 
